<resources>

    <string name="app_name">EnvironMo</string>
    <string name="placeholder">null</string>
    <string name="weather_pressure">Pressure: </string>
    <string name="weather_humidity">Humidity: </string>
    <string name="weather_visibility">Visibility: </string>
    <string name="weather_cloudiness">Cloudiness: </string>
    <string name="weather_wind_speed">Speed: </string>
    <string name="weather_wind_direction">Direction: </string>
    <string name="weather_sunrise">Sunrise: </string>
    <string name="weather_sunset">Sunset: </string>
    <string name="dialog_city_select_title">Enter City Name: </string>
    <string name="dialog_city_select_hint">No WhiteSpace!!!</string>
    <string name="dialog_weather_plus_title">Weather Plus Info</string>
    <string name="temperature_format">\u00b0</string>
    <string name="activity_city_name">Cityname</string>
    <string name="button_import">Import Database</string>

</resources>